Adds translations related to issue #680.

--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -6,8 +6,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
 "POT-Creation-Date: 2014-01-07 15:30:40+00:00\n"
-"PO-Revision-Date: 2013-10-28 19:39-0500\n"
-"Last-Translator: Willington Vega <wvega@wvega.com>\n"
+"PO-Revision-Date: 2014-01-09 15:56-0500\n"
+"Last-Translator: Daniel Pérez <dapanas@gmail.com>\n"
 "Language-Team: \n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
@@ -16,7 +16,7 @@ msgstr ""
 "X-Poedit-KeywordsList: _e;__\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 1.6.3\n"
 "X-Poedit-SearchPath-0: .\n"
 
 msgid ""
@@ -5385,6 +5385,12 @@ msgid "This Plan is for Featured Ads."
 msgstr ""
 
 msgid "This Region can't be deleted because it has %d subregions."
+msgstr ""
+
+msgid ""
+"This configuration allows you to post ads to Facebook. You must have a "
+"Facebook Application created to use this feature. Read <a>How to Register "
+"and Configure a Facebook Application.</a>"
 msgstr ""
 
 msgid "This field is required."
