--- a/languages/AWPCP-es_ES.po
+++ b/languages/AWPCP-es_ES.po
@@ -7,7 +7,7 @@ msgstr ""
 "plugin\n"
 "POT-Creation-Date: 2014-01-07 15:30:40+00:00\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Willington Vega <wvega@wvega.com>\n"
+"Last-Translator: Daniel Pérez <dperez@nethexa.com>\n"
 "Language-Team: \n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
@@ -6110,6 +6110,15 @@ msgstr "Es un plan de pago para anuncios destacados."
 
 msgid "This Region can't be deleted because it has %d subregions."
 msgstr "Esta región no se puede eliminar porque tiene %d subregiones."
+
+msgid ""
+"This configuration allows you to post ads to Facebook. You must have a "
+"Facebook Application created to use this feature. Read <a>How to Register "
+"and Configure a Facebook Application.</a>"
+msgstr ""
+"Esta configuración le permite publicar anuncios en Facebook. Usted debe "
+"tener creada una Aplicación de Facebook para usar esta característica. Lea "
+"<a>Cómo registrar y configurar una aplicación de Facebook (inglés).</a>"
 
 msgid "This field is required."
 msgstr "Este campo es obligatorio."
