--- a/languages/AWPCP-es_ES.po
+++ b/languages/AWPCP-es_ES.po
@@ -5,9 +5,9 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-01-07 15:30:40+00:00\n"
+"POT-Creation-Date: 2014-01-14 15:15:14+00:00\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Daniel Pérez <dperez@nethexa.com>\n"
+"Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
@@ -1419,6 +1419,13 @@ msgstr ""
 "Felicidades. AWPCP se ha actualizado exitosamente. Ya puede acceder todas la "
 "funciones. <a href=\"%s\">Haga click aquí para continuar</a>."
 
+msgid ""
+"Congratulations. The Regions Sidelist was successfully regenerated. Go back "
+"to %s section."
+msgstr ""
+"Felicidades. La lista lateral de regiones ha sido reconstruida con éxito. "
+"Regrese a la sección %s."
+
 msgid "Congratulations. You have successfully added credit to your account."
 msgstr "Felicidades. Usted ha agregado crédito a su cuenta con éxito."
 
@@ -2233,6 +2240,9 @@ msgstr ""
 "Por razones de seguridad, usted debe pasarle a reCAPTCHA un parámetro con la "
 "IP remota."
 
+msgid "Force secure URLs on payment pages"
+msgstr "Forzar URL seguras en las páginas que involucran pagos"
+
 msgid "Form"
 msgstr "Formulario"
 
@@ -2422,6 +2432,13 @@ msgstr "Convenciones"
 msgid "If adding images to your ad, select your image from your local computer"
 msgstr ""
 "Si deseás agregar imágenes a tu Anuncio, seleccionalas desde tu computadora"
+
+msgid ""
+"If checked all classifieds pages that involve payments will be accessed "
+"through a secure (HTTPS) URL."
+msgstr ""
+"Cuando está habilitado, todas las páginas que involucran pagos serán "
+"accesididas a través de URLs seguras (HTTPS)."
 
 msgid "If checked only administrator users will be allowed to post Ads."
 msgstr ""
@@ -3382,9 +3399,6 @@ msgstr ""
 msgid "No premium modules installed."
 msgstr "No hay módulos premiun instalados."
 
-msgid "No results found. Exepcting one."
-msgstr "No se encontró ningún resultado. Se esperaba uno."
-
 msgid ""
 "No specific category was selected for browsing so you are viewing listings "
 "from all categories."
@@ -4120,6 +4134,12 @@ msgstr "Límite de beneficio"
 
 msgid "Reference"
 msgstr "Referencia"
+
+msgid "Regenerate Regions Sidelist"
+msgstr "Regenerar Lista Lateral de Regiones"
+
+msgid "Regenerate Sidelist"
+msgstr "Regenerar Lista Lateral"
 
 msgid "Region Control Settings"
 msgstr "Configuración de Control de Región"
@@ -5297,6 +5317,25 @@ msgctxt "Edit Region success message"
 msgid "The Region data has been updated."
 msgstr "La información de Región ha sido actualizada "
 
+msgid ""
+"The Regions Sidelist needs to be rebuilt because the Regions data has "
+"changed, the cache expired or it has never been build before. Please go to "
+"the %s page."
+msgstr ""
+"La lista lateral de regiones necesita ser reconstruida porque la información "
+"de las regiones cambió, la versión en cache expiró o nunca ha sido "
+"construida. Por favor visite la página %s."
+
+msgid ""
+"The Regions Sidelist needs to be rebuilt because the Regions data has "
+"changed, the cache expired or it has never been build before. Please press "
+"the Regenerate Sidelist button shown below to start the process."
+msgstr ""
+"La lista lateral de regiones necesita ser reconstruida porque la información "
+"de las regiones cambió, la versión en cache expiró o nunca ha sido "
+"construida. Por favor presione el botón Regenerar Lista Lateral de Regiones "
+"que aparece abajo, para iniciar el proceso."
+
 msgid "The State is required."
 msgstr "El estado es necesario."
 
@@ -5996,6 +6035,13 @@ msgstr "Se ha producido un error procesando su transacción de pago:<br/>%s"
 msgid "There was an error trying to add the new field."
 msgstr "Ocurrió un error tratando de agregar el nuevo campo."
 
+msgid ""
+"There was an error trying to contact Facebook servers. Facebook responded: "
+"\"%s\"."
+msgstr ""
+"Ocurrió un error tratando de contactar los servidores de Facebook. Facebook "
+"respondió: \"%s\"."
+
 msgid "There was an error trying to delete the Ad. The Ad was not deleted."
 msgstr ""
 "Ocurrió un error tratando de eliminar su anuncio. El anuncio no fue "
@@ -6118,7 +6164,7 @@ msgid ""
 msgstr ""
 "Esta configuración le permite publicar anuncios en Facebook. Usted debe "
 "tener creada una Aplicación de Facebook para usar esta característica. Lea "
-"<a>Cómo registrar y configurar una aplicación de Facebook (inglés).</a>"
+"<a>Cómo registrar y configurar una aplicación de Facebook (inglés)</a>."
 
 msgid "This field is required."
 msgstr "Este campo es obligatorio."
@@ -6240,9 +6286,6 @@ msgstr ""
 
 msgid "To use reCAPTCHA you must get an API key from %s."
 msgstr "Para usar reCAPTCHA usted debe obtener una clave para la API en %s."
-
-msgid "Too many results found. Expecting one."
-msgstr "Se encontraron multiples resultados. Se esperaba uno."
 
 msgid "Top Level Category"
 msgstr "Categoría de Nivel Superior"
@@ -6894,6 +6937,13 @@ msgstr ""
 msgid "You can configure default dates for imported Ads"
 msgstr "Puede configurar fechas predeterminadas para los anuncios importados"
 
+msgid ""
+"You can find your application information in the <a>Facebook Developer Apps</"
+"a> page."
+msgstr ""
+"Puede encontrar la información de su aplicación en la página <a>Facebook "
+"Developer Apps</a>."
+
 msgid "You can get an API key from %s."
 msgstr "Usted puede obtener una clave para la API en  %s."
 
@@ -7254,13 +7304,6 @@ msgstr "Debe seleccionar uno de los planes de suscripción disponibles."
 msgid "You should select an owner for this Ad."
 msgstr "Debe seleccionar un autor para este anuncio."
 
-msgid ""
-"You will have to register your application at <a>Facebook Developers</a>. "
-"Please see the link for more information."
-msgstr ""
-"Usted tendrá que registrar su aplicación en <a>Facebook Developers</a>. Por "
-"favor revise el enlace para mayor información"
-
 msgid "Your Ad \"%s\" has been approved"
 msgstr "Su anuncio \"%s\" ha sido aprobado"
 
@@ -7614,6 +7657,19 @@ msgstr "usar información de planilla"
 
 msgid "visit the forums!"
 msgstr "viste los foros!"
+
+#~ msgid "No results found. Exepcting one."
+#~ msgstr "No se encontró ningún resultado. Se esperaba uno."
+
+#~ msgid "Too many results found. Expecting one."
+#~ msgstr "Se encontraron multiples resultados. Se esperaba uno."
+
+#~ msgid ""
+#~ "You will have to register your application at <a>Facebook Developers</a>. "
+#~ "Please see the link for more information."
+#~ msgstr ""
+#~ "Usted tendrá que registrar su aplicación en <a>Facebook Developers</a>. "
+#~ "Por favor revise el enlace para mayor información"
 
 #~ msgid "Post login form to"
 #~ msgstr "Enviar formulario de incio de sesión a"
