Update translation files.

--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-01-14 15:11:29+00:00\n"
+"POT-Creation-Date: 2014-01-16 20:39:50+00:00\n"
 "PO-Revision-Date: 2014-01-09 15:56-0500\n"
 "Last-Translator: Daniel Pérez <dapanas@gmail.com>\n"
 "Language-Team: \n"
@@ -5318,9 +5318,7 @@ msgstr ""
 msgid "There was an error trying to add the new field."
 msgstr ""
 
-msgid ""
-"There was an error trying to contact Facebook servers. Facebook responded: "
-"\"%s\"."
+msgid "There was an error trying to contact Facebook servers: \"%s\"."
 msgstr ""
 
 msgid "There was an error trying to delete the Ad. The Ad was not deleted."
