--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
-"POT-Creation-Date: 2014-01-14 15:15:14+00:00\n"
+"POT-Creation-Date: 2014-01-16 20:39:50+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4812,7 +4812,7 @@ msgstr ""
 msgid "There was an error trying to add the new field."
 msgstr ""
 
-msgid "There was an error trying to contact Facebook servers. Facebook responded: \"%s\"."
+msgid "There was an error trying to contact Facebook servers: \"%s\"."
 msgstr ""
 
 msgid "There was an error trying to delete the Ad. The Ad was not deleted."
