--- a/languages/AWPCP-es_ES.po
+++ b/languages/AWPCP-es_ES.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-01-14 15:15:14+00:00\n"
+"POT-Creation-Date: 2014-01-16 20:39:50+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -6035,12 +6035,9 @@ msgstr "Se ha producido un error procesando su transacción de pago:<br/>%s"
 msgid "There was an error trying to add the new field."
 msgstr "Ocurrió un error tratando de agregar el nuevo campo."
 
-msgid ""
-"There was an error trying to contact Facebook servers. Facebook responded: "
-"\"%s\"."
+msgid "There was an error trying to contact Facebook servers: \"%s\"."
 msgstr ""
-"Ocurrió un error tratando de contactar los servidores de Facebook. Facebook "
-"respondió: \"%s\"."
+"Ocurrió un error tratando de contactar los servidores de Facebook. \"%s\"."
 
 msgid "There was an error trying to delete the Ad. The Ad was not deleted."
 msgstr ""
