Update translation files.

--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-01-20 21:37:40+00:00\n"
+"POT-Creation-Date: 2014-01-22 00:02:54+00:00\n"
 "PO-Revision-Date: 2014-01-09 15:56-0500\n"
 "Last-Translator: Daniel Pérez <dapanas@gmail.com>\n"
 "Language-Team: \n"
@@ -4936,8 +4936,14 @@ msgctxt "upload files"
 msgid "The file %s could not be moved to the destination directory."
 msgstr ""
 
+msgid "The file %s does not appear to be a valid image file."
+msgstr ""
+
 msgctxt "upload files"
 msgid "The file %s does not appear to be a valid image file."
+msgstr ""
+
+msgid "The file %s has an invalid extension and was rejected."
 msgstr ""
 
 msgid ""
@@ -4955,12 +4961,6 @@ msgctxt "upload files"
 msgid ""
 "The file %s was properly uploaded but there was a problem trying to save the "
 "information to the database."
-msgstr ""
-
-msgid "The file does not appear to be a valid image file."
-msgstr ""
-
-msgid "The file has an invalid extension and was rejected."
 msgstr ""
 
 msgctxt "media manager"
@@ -4997,7 +4997,6 @@ msgstr ""
 msgid "The form has errors"
 msgstr ""
 
-msgctxt "upload files"
 msgid ""
 "The image %s did not meet the minimum height of %s pixels. The file was not "
 "uploaded."
@@ -5005,17 +5004,18 @@ msgstr ""
 
 msgctxt "upload files"
 msgid ""
+"The image %s did not meet the minimum height of %s pixels. The file was not "
+"uploaded."
+msgstr ""
+
+msgid ""
 "The image %s did not meet the minimum width of %s pixels. The file was not "
 "uploaded."
 msgstr ""
 
+msgctxt "upload files"
 msgid ""
-"The image did not meet the minimum height of %s pixels. The file was not "
-"uploaded."
-msgstr ""
-
-msgid ""
-"The image did not meet the minimum width of %s pixels. The file was not "
+"The image %s did not meet the minimum width of %s pixels. The file was not "
 "uploaded."
 msgstr ""
 
